--- a/Ukol4/requirements.txt
+++ b/Ukol4/requirements.txt
@@ -1,4 +1,9 @@
-numpy
-requests
-beautifulsoup4
-matplotlib
+# Základní závislosti pro spuštění crawleru a výpočtu PageRank
+requests>=2.25.0
+beautifulsoup4>=4.9.0
+numpy>=1.20.0
+
+# Volitelné (pro vykreslení grafu a testy)
+matplotlib>=3.1.0  # volitelné: potřeba pokud chcete vytvářet pagerank_top20.png
+pytest>=7.0.0      # volitelné: pokud chcete spouštět unit-testy
+
